--- a/index.css
+++ b/index.css
@@ -2,3 +2,19 @@ body {
     margin: 0;
     text-align: center;
 }
+
+.hero {
+    background: #6943fe;
+    color: white;
+    padding: 30px;
+}
+
+.main {
+    background: #f4f4f4;
+    padding: 10px;
+}
+
+.section {
+    background: white;
+    padding: 5px;
+}
